# newtyperef

./: Cargo.toml  README.md
src/: lib.rs
tests/: macro_tests.rs  types.rs
