[package]
name = "newtyperef"
version = "0.2.0"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "newtype ref"
license = "MIT"
repository = "https://github.com/zahash/newtyperef/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
