[package]
name = "newtyperef"
version = "0.3.0"
edition = "2021"
authors = ["zahash <zahash.z@gmail.com>"]
description = "generate custom newtype reference types"
license = "MIT"
repository = "https://github.com/zahash/newtyperef/"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
